# my_project_with_aff3ct

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
ci/: analysis-cppcheck.sh  build-linux-clang.sh  build-linux-gcc-4.8.sh  build-linux-gcc.sh  build-linux-icpc.sh  build-linux-macos.sh  build-mac-osx-clang.sh  build-macos-clang.sh  build-windows-gcc.bat  build-windows-msvc.bat  test-windows-run.bat
ci/tools/: aff3ct-git-version.bat  aff3ct-git-version.sh
examples/bootstrap/: CMakeLists.txt  README.md
examples/bootstrap/src/: main.cpp
examples/chain/: README.md
examples/chain/src/: main.cpp
examples/cython/: CMakeLists.txt  README.md  codec.pxd  codec.pyx  cython_example.pxd  cython_example.pyx  polar_codec.py  setup.py
examples/cython/src/: codec.cpp  codec.hpp  cython_example.cpp  cython_example.hpp
examples/cython_polar/: CMakeLists.txt  README.md  codec.pxd  codec.pyx  codec_polar.pxd  codec_polar.py  polar_codec.py  requirements.txt  setup.py
examples/cython_polar/src/: codec.cpp  codec.hpp  codec_polar.hpp  main.cpp
examples/factory/: CMakeLists.txt  README.md
examples/factory/src/: main.cpp
examples/openmp/: CMakeLists.txt  README.md
examples/openmp/src/: main.cpp
examples/pipeline/: CMakeLists.txt  README.md
examples/pipeline/src/: Block.cpp  Block.hpp  Buffered_Socket.cpp  Buffered_Socket.hpp  Circular_Buffer.cpp  Circular_Buffer.hpp  NT_Buffered_Socket.hpp  main.cpp
examples/pipeline/src/Destination/: Destination.hpp
examples/pipeline/src/Splitter/: Splitter.hpp
examples/pipeline/src/common/: Block.cpp  Block.hpp  Buffered_Socket.cpp  Buffered_Socket.hpp  Buffered_Socket.hxx  Circular_Buffer.cpp  Circular_Buffer.hpp  Circular_Buffer.hxx  NT_Buffered_Socket.hpp  NT_Buffered_Socket.hxx
examples/pipeline/src/common/Destination/: Destination.hpp
examples/pipeline/src/common/Destination/NO/: Destination_NO.cpp  Destination_NO.hpp
examples/pipeline/src/common/Module/Splitter/: Splitter.hpp  Splitter.hxx
examples/pipeline/src/common/Splitter/: Splitter.hpp
examples/pipeline/src/common/Tools/Algo/Circular_buffer/: Circular_buffer.cpp  Circular_buffer.hpp  Circular_buffer.hxx
examples/pipeline/src/common/Tools/Pipeline/Block/: Pipeline_block.cpp  Pipeline_block.hpp
examples/pipeline/src/common/Tools/Pipeline/Socket/: Pipeline_socket.hpp  Pipeline_socket.hxx  Pipeline_socket_buffered.cpp  Pipeline_socket_buffered.hpp
examples/sequence/: CMakeLists.txt
examples/sequence/src/: main.cpp
examples/sequence_tests/: CMakeLists.txt
examples/sequence_tests/src/: main.cpp
examples/streaming/src/: main.cpp
examples/subsequence/: CMakeLists.txt
examples/subsequence/src/: main.cpp
examples/systemc/: CMakeLists.txt  README.md
examples/systemc/src/: main.cpp
examples/tasks/: CMakeLists.txt  README.md
examples/tasks/src/: main.cpp
examples/thread/src/: main.cpp
examples/turbo_decoder/: CMakeLists.txt
examples/turbo_decoder/src/: main.cpp
src/: main.cpp
